# Agentic-AI

./: .env  README.md  pyproject.toml  resAgent.py  searchAgent.py
Langchain/: browser_automation.py  create_agent.py  lab1_single_file.py  langchain-core.py
Langchain/.playwright-mcp/: page-2026-07-03T17-14-03-859Z.yml  page-2026-07-03T17-14-46-426Z.yml  page-2026-07-03T17-16-59-454Z.yml  page-2026-07-03T17-38-28-437Z.yml  page-2026-07-03T17-41-55-429Z.yml  page-2026-07-05T16-28-56-023Z.yml  page-2026-07-05T16-44-40-212Z.yml  page-2026-07-05T16-51-59-195Z.yml  page-2026-07-05T16-55-02-521Z.yml
MCP/: MCP_Notes.txt  agents.py  server.py  usingMyMCP.py
MCP/.playwright-mcp/: page-2026-07-09T16-29-53-946Z.yml  page-2026-07-09T16-29-59-213Z.yml  page-2026-07-09T16-30-09-367Z.yml  page-2026-07-09T16-36-25-746Z.yml  page-2026-07-09T16-59-48-109Z.yml  page-2026-07-09T17-08-29-355Z.yml  page-2026-07-09T17-16-42-495Z.yml  page-2026-07-09T17-16-48-994Z.yml  page-2026-07-09T17-20-44-311Z.yml  page-2026-07-09T17-20-47-395Z.yml
MCP/workspace/: fifa.txt  fifa2.txt
MCP/workspace/workspace/: banoffee.md  certificates.md
Projects/: emailAgent.py
Various_Agent_Frameworks/Google_ADK/: GoogleADK.py  hindi.txt  notes.txt
Various_Agent_Frameworks/MastraAgent/: agent.ts  package-lock.json  package.json  tsconfig.json
Various_Agent_Frameworks/MastraAgent/workspace/: hindi.txt  notes.txt
coder/sandbox/: calculate_series.py  series_calculator.py
coder/src/coder/: crew.py  main.py
coder/src/coder/config/: agents.yaml
