[project]
name = "my-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-mcp-adapters>=0.3.0",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
